# doc81

./: .gitignore  README.md  pyproject.toml
.github/workflows/: push.yaml
src/doc81/core/: config.py  database.py  schema.py
src/doc81/mcp/: cli.py  main.py
src/doc81/rest/: app.py
src/doc81/rest/routes/: companies.py  templates.py  users.py
src/doc81/service/: generate_template.py  get_template.py  list_templates.py  templatify.py
src/doc_81/core/: config.py
src/doc_81/mcp/: cli.py  main.py
src/doc_81/service/: get_template.py  list_templates.py
tests/: test_markdown_templatify.py  test_mcp_cli.py  test_rest.py  test_service.py
tests/data/raw/: blog-template.md  blog.md
web/: package-lock.json  package.json
web/src/: middleware.ts
web/src/app/: layout.tsx  page.tsx
web/src/app/explore/: page.tsx
web/src/app/mcp/: page.tsx
web/src/app/templates/: page.tsx
web/src/app/templates/[path]/: page.tsx
web/src/components/: header.tsx  markdown-canvas.tsx  template-carousel.tsx  templates-list.tsx  user-form.tsx
web/src/components/auth/: login-form.tsx  signup-form.tsx  user-profile.tsx
web/src/hooks/: use-companies.ts  use-infinite-query.ts  use-templates.ts  use-users.ts
web/src/lib/: providers.tsx
web/src/lib/api/: types.ts
web/src/lib/api/services/: templates.ts
web/src/lib/supabase/: auth-context.tsx  middleware.ts
