[project]
name = "doc-81"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "python-frontmatter>=1.1.0",
]

[project.scripts]
doc81-mcp = "doc_81.mcp.main:main"
doc81-mcp-cli = "doc_81.mcp.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
mcp = [
    "fastmcp>=2.9.2",
    "typer>=0.16.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/doc_81"]
